See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.52.00

10.06.27 BJH  Release 10.51.00

              Add ppmtoascii.  Thanks "Frank Ch. Eigler" <fche@elastic.org>.

              pnmtops: Add -bitsperpixel option.

              pamx: Make exit status 0 instead of 10 when window manager
              requests termination.

              pnmsmooth: Respect -plain.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pnmsmooth: Don't display pnmconvol messages (i.e. run
              pnmconvol with -quiet).

              pamflip: speedup for PBM.  Use SSE2 and skip some idempotent
              pixel movement.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              anytopnm: recognize "PC bitmap" in 'file' response as BMP.
              (in addition to existing "PC bitmap data").

              libnetpbm, various PBM programs: Use SSE insted of MMX.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pbmtext/libpbmfont: Fix wild pointer; probably asymptomatic.
              Introduced in 10.39.

              pbmtext/libpbmfont: Fix some error messages for bad fonts.

              pbmtext/libpbmfont: fix crash with a BDF font with negative
              left or bottom border.  Introduced in 10.39.

              pamarith: fix memory leak.  Introduced in 10.41.

              pnm_bytespersample(): fix bogus assertion on 64 bit system.

              pnmtops: fix bug: 12 bits per sample output when 8 would do.
              Introduced in 10.40.

              palmtopnm: fix for pixel size 16.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.

              pnmsmooth: Fail politely when convolution matrix is so
              large as to bust the system's program parameter size limit
              on the invocation of pnmconvol.

              avstopam: fix incorrect output.
